# prj_InVendX

./: .env.example  .gitignore  CHANGELOG.md  HANDOFF.md  README.md  README_Cursor.md  operator_app.py  pyproject.toml  run_streamlit.bat
.cursor/rules/: 00_project_scope.md  01_build_order.md  02_data_contracts.md  03_mvp_boundaries.md  04_change_control.md
config/: aliases.yaml  keywords.yaml  score_rules.yaml  vendors.yaml
demo_data/: invendx_demo.db
docs/: decisions.md
scripts/: acquire_probe.py  backfill_evidence_dedupe_hashes.py
src/invendx/: __init__.py  cli.py  config_loader.py  logging_config.py  vendor_config_io.py
src/invendx/extract/: __init__.py  patterns.py  text.py
src/invendx/http/: __init__.py  client.py  robots.py
src/invendx/models/: __init__.py  discovery.py  evidence.py  scoring.py  vendor.py
src/invendx/pipeline/: __init__.py  browser_capture.py  coverage_status.py  entity_normalizer.py  evidence_fingerprint.py  evidence_views.py  github_collector.py  job_collector.py  (+9 more)
tests/: test_browser_capture.py  test_coverage_diag_repo.py  test_coverage_status.py  test_evidence_fingerprint.py  test_evidence_views.py  test_extract_profile_metrics.py  test_extraction_and_scoring.py  test_ingest_dedupe.py  test_manual_intake.py  test_operator_intel_helpers.py  test_report_builder_markdown.py  test_score_engine.py  test_scorecard_export.py  test_scoring_dev_portal_absence.py  test_scoring_scope.py  test_site_crawler.py  test_site_host_equiv.py  test_source_discovery.py  test_storage.py  test_vendor_config_io.py  test_vendor_summary_refresh.py
(+9 files in other folders)
